--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,15 @@
 - name: Made Tech Linux Workstation
   hosts: all
   become: true
+  vars_files:
+    - vars/main.yml
   tasks:  
+    # - include: "tasks/encryption.yml"
+    - include: "tasks/automatic-updates.yml"
+    # - include: "tasks/password-policy.yml"
+    # - include: "tasks/account-lockout.yml"
     - include: "tasks/firewall.yml"
+    - include: "tasks/disable-autorun.yml"
+    - include: "tasks/vpn.yml"
+    # - include: "tasks/anti-virus.yml"
+    # - include: "tasks/drivestrike.yml"
